--- a/app/css/bootstrap-reboot.css
+++ b/app/css/bootstrap-reboot.css
@@ -249,8 +249,7 @@ button {
 }
 
 button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
+  outline: none;
 }
 
 input,
