--- a/app/css/bootstrap-reboot.css
+++ b/app/css/bootstrap-reboot.css
@@ -73,7 +73,7 @@ body {
   line-height: 1.5;
   color: #263238;
   text-align: left;
-  background-color: #fff;
+  background-color: #f4f6f5;
 }
 
 [tabindex="-1"]:focus {
@@ -112,11 +112,15 @@ address {
   line-height: inherit;
 }
 
+ul {
+  list-style: none;
+}
+
 ol,
 ul,
 dl {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ol ol,
@@ -214,6 +218,7 @@ figure {
 }
 
 img {
+  max-width: 100%;
   vertical-align: middle;
   border-style: none;
 }
