--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,10 +59,19 @@
 /* Default classes end*/
 
 /* Default components start*/
+.default-section {
+    padding: 120px 0;
+}
+
 .content-wrapper {
     padding-bottom: 109px;
 }
 
+.title {
+    margin-bottom: 56px;
+    font-family: 'robotobold', sans-serif;
+    font-size: 2.25rem;
+}
 /* ========== Button start ========== */
 .btn {
     display: inline-block;
@@ -133,7 +142,7 @@
     box-shadow: 0 16px 20px rgba(216, 216, 216, .75);
 }
 
-.card-img {
+.card-img img {
     width: 100%;
 }
 
