--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,6 +53,10 @@
     background-color: #fff;
 }
 
+.bg-light-grey {
+    background-color: #f8f8f8;
+}
+
 .border-grey {
     border: 1px solid #dcdcdc;
 }
@@ -67,6 +71,16 @@
     margin-bottom: 56px;
     font-family: 'robotobold', sans-serif;
     font-size: 2.25rem;
+}
+
+.title.title-white {
+    color: #fff;
+}
+
+.default-text {
+    font-size: .9375rem;
+    line-height: 1.6em;
+    color: #b0bec5;
 }
 
 .fas.fa-chevron-right {
@@ -512,6 +526,41 @@
     color: #7c939f;
 }
 /* ========== Inner end ========== */
+
+/* ==========  Why-choose-foxtar start ========== */
+.why-choose-foxtar .title {
+    margin-bottom: 80px;
+}
+
+.advantage-title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-family: 'robotomedium', sans-serif;
+    font-size: 1.625rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+.advantage-title:hover {
+    color: #8bc34a;
+}
+/* ==========  Why-choose-foxtar end========== */ 
+
+/* ==========  Tutorials start========== */ 
+.tutorials-item {
+    padding-bottom: 40px;
+}
+
+.tutorials-img img {
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+.tutorials-name {
+    font-family: 'robotobold', sans-serif;
+    font-size: 1.5rem;
+}
+/* ==========  Tutorials end========== */ 
 
 /* ========== All-items-wrap start ========== */
 .all-items-wrap {
