--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,8 +57,28 @@
     background-color: #455a64;
 }
 
-.bg-light-grey {
-    background-color: #f8f8f8;
+.bg-ligth-marengo {
+    background-color: #546e7a;
+}
+
+.bg-violet {
+    background-color: #6370b6;
+}
+
+.bg-ligth-blue {
+    background-color: #64b5f6;
+}
+
+.bg-blue {
+    background-color: #4f71ce;
+}
+
+.bg-steel-blue {
+    background-color: #42a5f5;
+}
+
+.bg-crimson {
+    background-color: #d32f2f;
 }
 
 .border-grey {
@@ -108,9 +128,9 @@
 }
 
 .large-btn {
-    padding: 16px 20px;
+    padding: 16px 25px;
     font-family: 'robotomedium', sans-serif;
-    font-size: .9375rem;
+    font-size: 1rem;
 }
 /* ========== Button end ========== */
 
@@ -585,6 +605,16 @@
     margin-right: 13px;
 }
 
+.aside-section .btn {
+    width: 100%;
+    text-align: center;
+}
+
+.all-items-wrap .aside-section .btn {
+    margin-top: 16px;
+    font-size: .9375rem;
+}
+
 .aside-section .category-item-count {
     color: #90a4ae;
 }
@@ -641,10 +671,16 @@
     margin-right: 0;
 }
 
-.all-items-wrap .aside-section .btn {
-    width: 100%;
-    margin-top: 16px;
-    text-align: center;
+.aside-section.product-price-section .btn {
+    box-shadow: 0 1px 2px rgba(69, 90, 100, .75);
+}
+
+.aside-section.product-price-section .btn + .btn {
+    margin-top: 7px;
+}
+
+.aside-section.product-price-section i {
+    margin-right: 7px;
 }
 
 .product-info-list li {
@@ -767,14 +803,18 @@
     margin-top: 45px;
 }
 
-.product-btn {
-    padding: 20px 25px;
-    font-family: 'robotomedium', sans-serif;
-    font-size: 1rem;
+.product-links .btn + .btn {
+    margin-left: 18px;
 }
 
-.product-btn + .product-btn {
-    margin-left: 18px;
+.product-social a {
+    display: inline-block;
+    width: 54px;
+    height: 50px;
+    font-size: 1.125rem;
+    color: #fff;
+    text-align: center;
+    line-height: 50px;
 }
 /* ========== Product links end ========== */
 
