--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,10 +107,13 @@
     color: #b0bec5;
 }
 
-.fas.fa-chevron-right {
-
+.fa-chevron-right {
     font-size: .875rem;
     color: #8bc34a;
+}
+
+.default-chevron-list .fa-chevron-right {
+    margin-right: 13px;
 }
 
 /* ========== Button start ========== */
@@ -451,7 +454,7 @@
     margin-top: 20px;
 }
 
-.dropdown-menu.dropdown-menu-list .fas.fa-chevron-right {
+.dropdown-menu.dropdown-menu-list .fa-chevron-right {
     margin-right: 10px;
 }
 
@@ -599,10 +602,6 @@
 
 .aside-section .default-chevron-list li + li {
     margin-top: 23px;
-}
-
-.aside-section .default-chevron-list .fas.fa-chevron-right {
-    margin-right: 13px;
 }
 
 .aside-section .btn {
@@ -818,6 +817,68 @@
 }
 /* ========== Product links end ========== */
 
+/* ========== Product tabs start ========== */
+.product-tabs {
+    margin-top: 55px;
+    margin-bottom: 52px;
+}
+
+.nav-item {
+    flex-grow: 1;
+}
+
+.nav-item + .nav-item {
+    border-left: 1px solid #dfdfdf;
+}
+
+.nav-link {
+    position: relative;
+    display: block;
+    padding: 20px 10px;
+    text-align: center;
+    border-bottom: 1px solid #dfdfdf;
+}
+
+.nav-link::after {
+    content: "";
+    position: absolute;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    height: 0;
+    transition: all .2s ease-in;
+}
+
+.nav-link.active::after {
+    height: 3px;
+    background-color: #8bc34a;
+}
+
+.tab-pane {
+    display: none;
+    padding: 35px 35px 65px;
+}
+
+.tab-pane.show {
+    display: flex;
+}
+
+.tab-pane .default-chevron-list + .default-chevron-list {
+    margin-left: 50px;
+}
+
+.tab-pane .default-chevron-list li + li {
+    margin-top: 20px;
+}
+
+.tab-pane .default-chevron-list .fa-chevron-right {
+    font-size: 1rem;
+}
+
+.tab-pane .default-chevron-list li span {
+    color: #707070;
+}
+/* ========== Product tabs end ========== */
 /* Custom styles end */
 
 
