add product-price-section, create footer

--- a/app/css/bootstrap-reboot.css
+++ b/app/css/bootstrap-reboot.css
@@ -15,6 +15,16 @@
 }
 
 @font-face {
+  font-family: 'robotolight';
+  src: url('../fonts/roboto-light-webfont.woff2') format('woff2'),
+       url('../fonts/roboto-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+
+}
+
+@font-face {
   font-family: 'robotomedium';
   src: url('../fonts/roboto-medium-webfont.woff2') format('woff2'),
        url('../fonts/roboto-medium-webfont.woff') format('woff');
@@ -40,6 +50,26 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'latosemibold';
+  src: url('../fonts/lato-semibold-webfont.woff2') format('woff2'),
+       url('../fonts/lato-semibold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ralewaybold';
+  src: url('../fonts/raleway-bold-webfont.woff2') format('woff2'),
+       url('../fonts/raleway-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 
 *,
 *::before,
